Phil playing around

--- a/00_test_install.ipynb
+++ b/00_test_install.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is used to test that your TenforFlow installation is setup properly. You can press `shift + enter` to quickly advance through each line of a notebook. Try it!\n",
+    "PHIL WAS HERE This notebook is used to test that your TenforFlow installation is setup properly. You can press `shift + enter` to quickly advance through each line of a notebook. Try it!\n",
     "\n",
     "The arrow just left of the square box will also run a cell if you want to do it that way. Click on `Help -> Keyboard Shortcuts` to see keyboard keys to navigate through the notebook and run cells. \n",
     "\n",
