Update to Doug's latest

--- a/02_tensorflow_logistic_regression.ipynb
+++ b/02_tensorflow_logistic_regression.ipynb
@@ -252,7 +252,9 @@
    "source": [
     "# cell 9\n",
     "\n",
-    "mnist_model.compile(optimizer='adam', \n",
+    "optimizer = tf.keras.optimizers.SGD(0.1)\n",
+    "\n",
+    "mnist_model.compile(optimizer=optimizer, \n",
     "              loss='sparse_categorical_crossentropy',\n",
     "              metrics=['accuracy'])\n",
     "\n",
@@ -367,13 +369,6 @@
    },
    "source": [
     "Go back to cell 10 and change the image_index once more. The model now uses the trained weight values. Nine out of ten times as we see by the accuracy it should pick the correct label."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**IMPORTANT: When you are finished make sure you go to the Jupyter notebook “File” menu above and select “Close and halt”. This will shutdown this notebook and take you back to the Jupyter Notebook Home tab.**"
    ]
   },
   {
