--- a/03a_tensorflow_deep_network.ipynb
+++ b/03a_tensorflow_deep_network.ipynb
@@ -1,5 +1,29 @@
 {
  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I-S9EwVjCGwX",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Deep Learning for Computer Vision with TensorFlow 2.0\n",
+        "\n",
+        "Table of contents:\n",
+        "[Lab 0](https://colab.research.google.com/github/embedded-vision/dlcvtf2/blob/master/00_test_install.ipynb) | \n",
+        "[Lab 1](https://colab.research.google.com/github/embedded-vision/dlcvtf2/blob/master/01_linear_regression.ipynb) | \n",
+        "[Lab 2](https://colab.research.google.com/github/embedded-vision/dlcvtf2/blob/master/02_tensorflow_logistic_regression.ipynb) | \n",
+        "[Lab 3a](https://colab.research.google.com/github/embedded-vision/dlcvtf2/blob/master/03a_tensorflow_deep_network.ipynb) | \n",
+        "[Lab 3b](https://colab.research.google.com/github/embedded-vision/dlcvtf2/blob/master/03b_deep_mnist_visualize.ipynb) | \n",
+        "[Lab 4](https://colab.research.google.com/github/embedded-vision/dlcvtf2/blob/master/04_mnist_cnn.ipynb) | \n",
+        "[Lab 5](https://colab.research.google.com/github/embedded-vision/dlcvtf2/blob/master/05_data_prep.ipynb) | \n",
+        "[Lab 6](https://colab.research.google.com/github/embedded-vision/dlcvtf2/blob/master/06_transfer_learning.ipynb) | \n",
+        "\n",
+        "# Lab 3: Deep MNIST\n",
+        "\n",
+        "If you ever want to start over just go to the menu at the top and select Runtime ->  Restart runtime.  (Please do not use Runtime -> Reset all runtimes.)"
+      ]
+    },
   {
    "cell_type": "markdown",
    "metadata": {},
