--- a/01_linear_regression.ipynb
+++ b/01_linear_regression.ipynb
@@ -76,11 +76,7 @@
       "metadata": {
         "id": "ZIVGU2V5_xS8",
         "colab_type": "code",
-        "outputId": "425f6c95-e1ea-4acf-e0b1-2e0bdb2cd37e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        }
+        "colab": {}
       },
       "source": [
         "# Cell 1.1\n",
@@ -99,17 +95,8 @@
         "\n",
         "print ('cell finished')"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Populating the interactive namespace from numpy and matplotlib\n",
-            "cell finished\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -126,11 +113,7 @@
       "metadata": {
         "id": "dyFqajrM7PXY",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "d596ae34-3937-42ae-b604-d79e5e2c51aa"
+        "colab": {}
       },
       "source": [
         "# Cell 1.2\n",
@@ -140,16 +123,8 @@
         "print ('Found GPU at: {}'.format(device_name))\n",
         "print ('cell finished')"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Found GPU at: /device:GPU:0\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -170,14 +145,10 @@
       "metadata": {
         "id": "zjtdcqvm_xTA",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "d0fbef5d-5586-4f06-e809-536d23c8aad7"
+        "colab": {}
       },
       "source": [
-        "# cell 1.3\n",
+        "# Cell 1.3\n",
         "\n",
         "PERSQFT = .4   # $400 per sq ft\n",
         "BASE = .35     # $350K base price \n",
@@ -188,16 +159,8 @@
         "\n",
         "print ('cell finished')"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "cell finished\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -214,14 +177,10 @@
       "metadata": {
         "id": "Q8X8GrYw_xTD",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "73ecf785-9492-4b11-df62-2625470458bc"
+        "colab": {}
       },
       "source": [
-        "#cell 1.4\n",
+        "# Cell 1.4\n",
         "\n",
         "def make_noisy_data(w=PERSQFT, b=BASE, n=ITEMS):\n",
         "    sqft = np.random.rand(n).astype(np.float32) * 6 # multiply by 6 for max sq ft of 6000\n",
@@ -231,16 +190,8 @@
         "\n",
         "print ('cell finished')"
       ],
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "cell finished\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -257,30 +208,18 @@
       "metadata": {
         "id": "fgZh0nMM_xTF",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "d6271879-a6fb-4d8e-deef-7d1efbcc178f"
+        "colab": {}
       },
       "source": [
-        "# cell 1.5\n",
+        "# Cell 1.5\n",
         "\n",
         "sqft_train, price_train = make_noisy_data()\n",
         "\n",
         "\n",
         "print ('cell finished')"
       ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "cell finished\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -297,46 +236,17 @@
       "metadata": {
         "id": "aeCLZkmt_xTH",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 286
-        },
-        "outputId": "7669b77d-d2ee-4505-bad3-d695de8adbe6"
+        "colab": {}
       },
       "source": [
-        "# cell 1.6\n",
+        "# Cell 1.6\n",
         "\n",
         "# Run this cell to plot the data.\n",
         "\n",
         "pylab.plot(sqft_train, price_train, 'b.')\n"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f3a4873df90>]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAD8CAYAAACMwORRAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMi40LCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcv7US4rQAAFzJJREFUeJzt3X+sZGV9x/HPZ3evq1Urye5GyP5w\nTYr9RxqxN5gbGnNVbIASaYJNsakXjeYSsquSahoxEVH+2PQfszZrJStg97ZWNKwaamgtIhuX5PLj\nLgURVs3GqCzSsq4VpOLdH/fbP85M79xhZs6ZmXPmnDnzfiWTmTlz7swzIXzm2e/znOdxRAgAUC/r\nym4AACB/hDsA1BDhDgA1RLgDQA0R7gBQQ4Q7ANQQ4Q4ANUS4A0ANpYa77Zfbfsj2Y7afsP3pDuds\ntP1V28dsP2h7ZxGNBQBksyHDOcuS3h4RL9ieknS/7X+LiAdazvmApP+JiD+wfbWkv5P0l73edPPm\nzbFz585B2w0AE+nIkSO/jIgtaeelhnsk6xO80Hg61bi1r1lwpaSbGo/vlLTPtqPH2gY7d+7U0tJS\n2scDAFrY/lmW8zLV3G2vt/2opGcl3RMRD7adslXSU5IUEWckPSdpU4f3mbe9ZHvpxIkTWT4aADCA\nTOEeEWcj4k2Stkm6yPYbB/mwiNgfEdMRMb1lS+q/KgAAA+prtkxE/FrSfZIubXvpaUnbJcn2Bkmv\nkXQyjwYCAPqXZbbMFtvnNB6/QtI7Jf2w7bS7JF3TePxuSd/tVW8HABQry2yZ8yQdsL1eyY/B1yLi\nW7Y/I2kpIu6SdJukf7J9TNKvJF1dWIsBAKmyzJb5vqQLOxy/seXx7yT9Rb5NAwAMiitUAWBEFhel\nPXuS+6JlKcsAAIa0uCi94x3SqVPSy14m3XuvNDNT3OfRcweAETh0KAn2s2eT+0OHiv08wh0ARmB2\nNumxr1+f3M/OFvt5lGUAYARmZpJSzKFDSbAXWZKRCHcAGJmZmeJDvYmyDADUEOEOADVEuANADRHu\nAFBDhDsA1BDhDgA1RLgDQA0R7gBQQ4Q7ANQQ4Q4ANUS4A8CIsJ47ANQM67kDQEUN0/NuXc/9d7+T\nFhZyb94a9NwBIINOPW8p2xK+i4vSQw9JEcnzCOlLX5Lm5orrvRPuAJBB+05KCwvSgQPpZZbFxST8\nT51ae/zMmeQ9iwp3yjIAkEH7TkpStm3zDh2STp9ee8wufjcmeu4AkEH7TkrS2p57t6CenZWmplZ7\n7lNT0gc+UGxJRiLcASCz9p2U7r03fWB0Zib5QWieV3SoNxHuADCEZu/9wIHudfdRbq/XRM0dAAbU\nPsjare5eBsIdAAbUPsha5ABpvyjLAMCA2gdZR1166YVwB4AhlFFPzyK1LGN7u+37bD9p+wnbH+lw\nzqzt52w/2rjdWExzAWD00pYdGOWCYFll6bmfkfTRiHjE9qslHbF9T0Q82Xbe4Yi4Iv8mAkB50hb8\nGvWCYFml9twj4pmIeKTx+DeSjkraWnTDAGBQ/fSk085NmxFT1RkzfdXcbe+UdKGkBzu8PGP7MUm/\nkPSxiHhi6NYBQJ/ae9J790onT3Ye8MzS627OiOl2JWra62XJHO62XyXpoKTrI+L5tpcfkfS6iHjB\n9uWSvinp/A7vMS9pXpJ27NgxcKMBoJvWnvTysrR7t7Sy0jm8O/W628M9bUZMVWfMZAp321NKgv3L\nEfH19tdbwz4i7rb9D7Y3R8Qv287bL2m/JE1PT8dQLQeADlp70nYS3CsrncM7a687bUZMFWfMpIa7\nbUu6TdLRiPhsl3POlfTfERG2L1JSyz+Za0sBIIPWnvSmTdL113cP72F73YuL1euxN2XpuV8s6b2S\nHrf9aOPYJyTtkKSIuEXSuyVdZ/uMpBclXR0R9MwBlKK1J33BBb0X9xq0113VWTJNqeEeEfdLcso5\n+yTty6tRANCUR+84y+Je/cpSry8TV6gCqKw8esdFhXBVZ8k0Ee4AKiuPYC4qhKs6S6aJcAdQWZ2C\nud8yTZEhXMVZMk2EO4DK6rS13SBlmiqHcFEIdwCV1hrMe/ZUexCzStisA8DYqPLmGFVDzx3A2Kj6\nIGaVEO4AclX0VZuTWD8fBOEOIDdZ5qVX+ZL9OiHcAeQmbV561S/ZrxMGVAHkJm3As6obW9QRPXcA\nuUkb8Mx6tSilm+ER7gBy1WvAM8tsF+r2+SDcAeQia+CmzXbpVroZ9irVSUO4AxhangOl7aWbTZvW\nvvc113CVahYMqALoy+JisgzA4uLqsX4HStvfo/V5s3Rz883J/cmTa99b4irVLOi5A8isWw+9n2V1\n299j7961W+Ht3ZsEemt5p/W95+aSGzX33gh3AJl1m8fevm9ps+feKXjb3+PgwdXny8vSrl1SxNof\nj06DsIR6b4Q7gMx69dCbYZtWe29/j6uukg4fTp6vW5eE/MrKS388CPP+EO4AMkubyphl56RO73HB\nBau9/tYSDfX0wTkiSvng6enpWFpaKuWzARQjj1kzzGHvzfaRiJhOO4+eO4BcXXNNcj83N1g4U4LJ\nB+EOIBftvfa5ubJbNNmY5w4gFywKVi2EO4BcsAVetVCWAZALtsCrFsIdQG4zVBgMrQ7CHZhw7I5U\nT9TcgQk3yoHQTouOoRipPXfb2yUtSHqtpJC0PyI+13aOJX1O0uWSfivpfRHxSP7NBZC3fhb9Ggb/\nQhitLGWZM5I+GhGP2H61pCO274mIJ1vOuUzS+Y3bWyR9oXEPoOJGNRCaZWkC5Ce1LBMRzzR74RHx\nG0lHJW1tO+1KSQuReEDSObbPy721AHKXdTB12JIKUyVHq68BVds7JV0o6cG2l7ZKeqrl+fHGsWeG\naBuAAi0uSgsL0u23J73pXqWSPEoqTJUcrczhbvtVkg5Kuj4inh/kw2zPS5qXpB07dgzyFgBy0Azr\nF19cPdarVJJXSYWpkqOTabaM7Sklwf7liPh6h1OelrS95fm2xrE1ImJ/RExHxPSWLVsGaS+AHBw6\nlGyM0WrdumTJ3U6lF0oq4yfLbBlLuk3S0Yj4bJfT7pK02/YdSgZSn4sISjJARc3OJmG+srJ67OxZ\n6UMf6lyioaQyfrKUZS6W9F5Jj9t+tHHsE5J2SFJE3CLpbiXTII8pmQr5/vybCiAvMzPS5z8vXXfd\nasCvrEinTydb3HUqvVBSGS+p4R4R90tyyjkhaVdejQJQvPn55H7XriTYp6aSYG/23Cm9jDeWHwAm\n2Pz86hZ3zTCn9FIPhDsw4drLLYR6PbC2DDBBWNtlctBzByYEa7tMFnruQEXl3ctmG7zJQs8dqIjW\nNV6k/HvZo1r9EdVAuAMV0F4yueaa/FdQ5EKkyUK4AxXQXjKRiullcyHS5CDcgRForsAoSXNzLw3Y\n9pLJ3Fxyo5eNQTm5uHT0pqenY2lpqZTPBkZpcTEJ6GaPfONG6b77XhrYeW1SjXqzfSQiptPOo+cO\nFOzQoWTNlqZTp5JefHuQF1ky4Ydj8hDuQMFmZ5N1W5o99w0bXrpBhlRc+DK/fTIR7kDBZmaS4G7W\n3CXpi19cHTxdWJAOHCgufNm7dDIR7sAItJZcFhfXhrlUbPgyv30yEe7AiLXPN5fWhn238B20bs78\n9snEbBmgAtKCm7o5mpgtA+SsyBknaTNlqJujX4Q7kEGvnvMophlSN0e/CHcgg24951GVS6ibo1+E\nO5BBt57zKMslrAuDfhDuQAbdes6US1BVhDuQUaeeM+USVBXhDgyJcgmqiG32AKCGCHegIHnvgQr0\ng7IMUACuKEXZ6LkDBeg0RRIYJcIdKEBziuT69UyRRDkoywAFYIokyka4AwVhiiTKlFqWsX277Wdt\n/6DL67O2n7P9aON2Y/7NBAD0I0vP/R8l7ZO00OOcwxFxRS4tAgAMLTXcI+J7tncW3xRgdJrL9G7a\nJJ08SV0c9ZNXzX3G9mOSfiHpYxHxRKeTbM9LmpekHTt25PTRQLrWNdel5P70aSlCWrdO2riRueio\nlzzC/RFJr4uIF2xfLumbks7vdGJE7Je0X0q22cvhs4FUi4vS2962ekHRZZclj5tWVtjdCPUz9Dz3\niHg+Il5oPL5b0pTtzUO3DMjJwoK0vJz00peXpR//eO3rNnPRUT9Dh7vtc2278fiixnueHPZ9gaK8\n4Q1JGcaWpqaka6+lJIP6SS3L2P6KpFlJm20fl/QpSVOSFBG3SHq3pOtsn5H0oqSrI4KSCyqhuWjX\nhg3JUgBTU0lZ5txzk+Nzc4Q66inLbJn3pLy+T8lUSaBSWhfv2rBB+uAHpQsvlK6/frX+PjdXdiuB\nYrC2DGqrdfGuM2ekHTuSaY8s6IVJwPIDqK1u+5uy5ykmAeGOymudo95eH+/1WrfFu4Zd0KvXZwJV\nQbij0nptepFlQ4y8F+9iEw6MC2ruqLRem14MsiFGM5w/+cnkvt8t8NiEA+OCcEel9dr0YpANMYYN\nZzbhwLigLINK67XpRfO1hR7rlbbXx7sNsubRHqBKXNb1RtPT07G0tFTKZ6M+etXA9++Xdu9Oeumt\nC4MxIIpxZvtIREynnUfPHWOtU5mlGeC7diXz26VkTZnma+yQhElAzR2Vsbgo7dnT3yBntxr4oUPJ\nao9N69dTH8dkoeeOUrSXRgadYtitBj47m5RilpeT9dr37aO3jslCuGPkOgV5t/JKt79vDfNOZRYG\nPjHpCHeM1OKidNNNSY+6dZOMrLNY+unhU1vHJCPcMTLNYG4G+7p1q0GetafdTw8fmGSEO0amGczN\nYL/kkqQX3wznLD3tYeepA5OCcMfItAdza7BnRS0dyIZwx1D6uSBoZkbau1c6eFC66qrBg5laOpCO\ncMfA2gc39+5NNsPoFvSLi6u7IB0+LF1wASENFIVwx8CX47cObi4vJ5f6r6x0n8XCYCgwOoT7hBtm\nffLWGrqdhHbr9Mb292EwFBgdwn3CDdObbh3c3LRp7cbTnYKbwVBgdFgVcsJ16rlLgwUwqy0CxWNV\nSGTS3puW+ivTdFoKAED5CHesCeU9e/pb42XQej29fKBYhDvW6GfQc9B6PZtMA8Uj3LFGP4Oeg85+\nYUokUDzCfUL1Kou0lmnSzhtk9gtTIoHiEe4TKGtZJMt5aYOonX4cmBIJFI9wn0BZyiLd1l3vd2pk\ntx8HZtYAxUrdQ9X27baftf2DLq/b9t/bPmb7+7bfnH8zkadu+442NUP5nnteuu56Pzr9iAAYjSwb\nZP+jpEt7vH6ZpPMbt3lJXxi+WchT+8bTzbLIzTd3XwNmeVlqvb5t797+e9ppPyIAipNalomI79ne\n2eOUKyUtRHKp6wO2z7F9XkQ8k1MbMYRupZFeZZHZ2SSQV1ZWj5082f9nU1sHypOl555mq6SnWp4f\nbxxDBQxSGpmZkfbtkzZsSEoyGzcO3uuemZFuuIFgB0ZtpAOqtueVlG60Y8eOUX70xBp02uH8fLLe\nOr1uYDzlEe5PS9re8nxb49hLRMR+SfulZOGwHD4bKYYpjTCjBRhfeYT7XZJ2275D0lskPUe9vVoI\naWDypIa77a9ImpW02fZxSZ+SNCVJEXGLpLslXS7pmKTfSnp/UY0FAGSTZbbMe1JeD0m7cmsRAGBo\necyWAQBUDOEOADVEuANADRHuAFBDhDsA1BDhDgA1RLjXRPvKjwAmG5t11AAbTgNoR7iPgW77mDaP\n//znbDgNYC3CveK69cpbj69bl2ysYSfL9LIpBgBq7hXXbT321uOnTycba0QkzwGAcK+4blvVNY/b\na88/e5a9SgEQ7pXXbb/T5vFrr5WmplbPn5qiLANAckQ5e2ZMT0/H0tJSKZ/dr24DmqP6+yzvv7CQ\nPJ6bYzAVqDPbRyJiOu08BlRTDDvNcBTTFNmMA0A7yjIpBtlgOs+/B4BBEO4pug1odtN+pWi/fw8A\neaAsk6KfDaa7lWAG3aAaAAZFuGeQtabdWoJZXpZuuim5dfv7ogdaAUwuwj1HzRLM8nJyUdF3viMd\nPtx5EJX1YAAUiZp7jpolmEsuSZYEWFnpPojKQCuAIhHuQ+i0zO7MTFKK2bix9yAqA60AikRZZkC9\nyipZBlEZaAVQJMJ9QJ3KKq0BnWUQlouPABSFssyAKKsAqDJ67hl0mrJIWQVAlRHuKTrV1qXVUL/h\nhjJbBwCdEe4p2mvrCwvSgQPMTwdQbdTcU7TX1iXmpwOovkzhbvtS2z+yfcz2xzu8/j7bJ2w/2rh9\nMP+mpus073xY7ZtlzM0xkAqg+lLLMrbXS/q8pHdKOi7pYdt3RcSTbad+NSJ2F9DGTPK+nL99ELX1\nvRhIBVB1WWruF0k6FhE/kSTbd0i6UlJ7uJcqbd55P9J+KJifDqDqspRltkp6quX58caxdlfZ/r7t\nO21vz6V1fchz3jnrvgAYd3kNqP6rpJ0R8UeS7pF0oNNJtudtL9leOnHiRE4fnei2kfQguEAJwLjL\nEu5PS2rtiW9rHPt/EXEyIpYbT2+V9Med3igi9kfEdERMb9myZZD2jkSePxQAUIYsNfeHJZ1v+/VK\nQv1qSX/VeoLt8yLimcbTd0k6mmsrM8h7QJW6OoBxltpzj4gzknZL+raS0P5aRDxh+zO239U47cO2\nn7D9mKQPS3pfUQ3uhjo5AKzKdIVqRNwt6e62Yze2PL5BUqkX4jfr5M2e+yB1cra9A1AXtVl+IMtC\nXr3Cm23vANRJbcJd6l0nTwvvPOfJA0DZJmZtmbSaPNMfAdRJrXruvaTV5FmfHUCd1Crce9XUs+5r\nSqgDqIPahHuWAVHCG8CkqE3NnXnuALBq7MK925rtDIgCwKqxKsv0Kr0wIAoAq8Yq3NPmolNTB4DE\nWJVlKL0AQDZj1XOn9AIA2YxVuEuUXgAgi7EqywAAsiHcAaCGCHcAqCHCHQBqiHAHgBoi3AGghhwR\n5XywfULSz/r4k82SfllQc8rCdxofdfxefKfx0P6dXhcRW9L+qLRw75ftpYiYLrsdeeI7jY86fi++\n03gY9DtRlgGAGiLcAaCGxinc95fdgALwncZHHb8X32k8DPSdxqbmDgDIbpx67gCAjMYi3G1favtH\nto/Z/njZ7RmW7dttP2v7B2W3JS+2t9u+z/aTtp+w/ZGy2zQs2y+3/ZDtxxrf6dNltykvttfb/k/b\n3yq7LXmw/VPbj9t+1PZS2e3Jg+1zbN9p+4e2j9ruaz3cypdlbK+X9GNJ75R0XNLDkt4TEU+W2rAh\n2H6rpBckLUTEG8tuTx5snyfpvIh4xParJR2R9Odj/t/Jkl4ZES/YnpJ0v6SPRMQDJTdtaLb/RtK0\npN+PiCvKbs+wbP9U0nRE1GaOu+0Dkg5HxK22Xybp9yLi11n/fhx67hdJOhYRP4mIU5LukHRlyW0a\nSkR8T9Kvym5HniLimYh4pPH4N5KOStpabquGE4kXGk+nGrdq94YysL1N0p9JurXstqAz26+R9FZJ\nt0lSRJzqJ9il8Qj3rZKeanl+XGMeGnVne6ekCyU9WG5LhtcoXzwq6VlJ90TE2H8nSXsl/a2klbIb\nkqOQ9B+2j9ieL7sxOXi9pBOSvtQon91q+5X9vME4hDvGiO1XSToo6fqIeL7s9gwrIs5GxJskbZN0\nke2xLqPZvkLSsxFxpOy25OxPIuLNki6TtKtR+hxnGyS9WdIXIuJCSf8rqa/xxnEI96clbW95vq1x\nDBXTqEsflPTliPh62e3JU+OfxPdJurTstgzpYknvatSo75D0dtv/XG6ThhcRTzfun5X0DSXl3HF2\nXNLxln8p3qkk7DMbh3B/WNL5tl/fGFS4WtJdJbcJbRqDj7dJOhoRny27PXmwvcX2OY3Hr1AyqP/D\ncls1nIi4ISK2RcROJf8vfTci/rrkZg3F9isbg/hqlC7+VNJYz0SLiP+S9JTtP2wceoekviYnVH6D\n7Ig4Y3u3pG9LWi/p9oh4ouRmDcX2VyTNStps+7ikT0XEbeW2amgXS3qvpMcbNWpJ+kRE3F1im4Z1\nnqQDjRlb6yR9LSJqMXWwZl4r6RtJ/0IbJP1LRPx7uU3KxYckfbnRqf2JpPf388eVnwoJAOjfOJRl\nAAB9ItwBoIYIdwCoIcIdAGqIcAeAGiLcAaCGCHcAqCHCHQBq6P8AG9wUC88F018AAAAASUVORK5C\nYII=\n",
-            "text/plain": [
-              "<Figure size 432x288 with 1 Axes>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -356,7 +266,7 @@
         "colab": {}
       },
       "source": [
-        "# cell 1.7\n",
+        "# Cell 1.7\n",
         "\n",
         "def model():\n",
         "    model = keras.Sequential([\n",
@@ -387,7 +297,7 @@
         "colab": {}
       },
       "source": [
-        "# cell 1.8\n",
+        "# Cell 1.8\n",
         "\n",
         "optimizer = tf.keras.optimizers.SGD(0.01)\n",
         "\n",
@@ -414,7 +324,7 @@
         "colab": {}
       },
       "source": [
-        "# cell 1.9\n",
+        "# Cell 1.9\n",
         "\n",
         "m1 = model()\n",
         "\n",
@@ -443,7 +353,7 @@
         "colab": {}
       },
       "source": [
-        "# cell 1.10\n",
+        "# Cell 1.10\n",
         "\n",
         "m1.compile(loss='mse',\n",
         "                optimizer=optimizer,\n",
@@ -472,7 +382,7 @@
         "colab": {}
       },
       "source": [
-        "# cell 1.11\n",
+        "# Cell 1.11\n",
         "\n",
         "m1.summary()\n",
         "\n",
@@ -499,7 +409,7 @@
         "colab": {}
       },
       "source": [
-        "# cell 1.12\n",
+        "# Cell 1.12\n",
         "\n",
         "test_sqft = [[4.0]]\n",
         "expPrice = test_sqft[0][0] * PERSQFT + BASE\n",
@@ -530,7 +440,7 @@
         "colab": {}
       },
       "source": [
-        "# cell 1.13\n",
+        "# Cell 1.13\n",
         "\n",
         "history = m1.fit(\n",
         "  sqft_train, price_train,\n",
@@ -561,7 +471,7 @@
         "colab": {}
       },
       "source": [
-        "# cell 1.14\n",
+        "# Cell 1.14\n",
         "\n",
         "wval = m1.get_weights()[0][0][0]\n",
         "bval = m1.get_weights()[1][0]\n",
@@ -592,7 +502,7 @@
         "colab": {}
       },
       "source": [
-        "# cell 1.15\n",
+        "# Cell 1.15\n",
         "\n",
         "print (\"w: %f, b: %f\" % (wval, bval))\n",
         "pylab.plot(sqft_train, price_train, 'b.')\n",
@@ -618,35 +528,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CiBmWyUq_xTd",
+        "id": "jU_d0XA7fyU_",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "3d11ea30-33c0-4b3a-9f5a-b190d305e019"
+        "colab": {}
       },
       "source": [
-        "tf.test.is_gpu_available(\n",
-        "    cuda_only=False,\n",
-        "    min_cuda_compute_capability=None\n",
-        ")"
+        ""
       ],
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 10
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
