--- a/04_mnist_cnn.ipynb
+++ b/04_mnist_cnn.ipynb
@@ -337,7 +337,7 @@
       "source": [
         "# Cell 4.9\n",
         "\n",
-        "pylab.plot(history.history['acc'],'b')\n",
+        "pylab.plot(history.history['accuracy'],'b')\n",
         "pylab.title('Model accuracy')\n",
         "pylab.ylabel('Accuracy')\n",
         "pylab.xlabel('Epoch')\n",
