--- a/06_transfer_learning.ipynb
+++ b/06_transfer_learning.ipynb
@@ -140,11 +140,14 @@
    "source": [
     "from __future__ import absolute_import, division, print_function\n",
     "\n",
-    "!pip install tensorflow==2.0.0-alpha0 \n",
+    "import tensorflow as tf\n",
+    "if tf.__version__ != \"2.0.0-alpha0\":\n",
+    "    !pip install tensorflow-gpu==2.0.0-alpha0\n",
+    "    print(\"Please go to Runtime -> restart runtime and then, once that finishes, rerun this cell.\")\n",
+    "\n",
     "\n",
     "import os\n",
     "\n",
-    "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "print(\"TensorFlow version is \", tf.__version__)\n",
     "\n",
@@ -534,8 +537,8 @@
    },
    "outputs": [],
    "source": [
-    "acc = history.history['acc']\n",
-    "val_acc = history.history['val_acc']\n",
+    "acc = history.history['accuracy']\n",
+    "val_acc = history.history['val_accuracy']\n",
     "\n",
     "loss = history.history['loss']\n",
     "val_loss = history.history['val_loss']\n",
