Fix cat file prob, renumber

--- a/05_data_prep.ipynb
+++ b/05_data_prep.ipynb
@@ -20,9 +20,8 @@
       "version": "2.7.10"
     },
     "kernelspec": {
-      "display_name": "Python 2",
-      "language": "python",
-      "name": "python2"
+      "name": "python2",
+      "display_name": "Python 2"
     },
     "accelerator": "GPU"
   },
@@ -255,7 +254,7 @@
         "colab": {}
       },
       "source": [
-        "# Cell 5.7\n",
+        "# Cell 5.6\n",
         "\n",
         "train_dir = os.path.join(base_dir, 'train')\n",
         "validation_dir = os.path.join(base_dir, 'validation')\n",
@@ -297,7 +296,7 @@
         "colab": {}
       },
       "source": [
-        "# Cell 5.8\n",
+        "# Cell 5.7\n",
         "\n",
         "gen =keras.preprocessing.image.ImageDataGenerator(\n",
         "    rotation_range=20,\n",
@@ -309,7 +308,7 @@
         "    horizontal_flip=True,\n",
         "    rescale=1./255)\n",
         "\n",
-        "gimg = plt.imread('./datasets/cat.952.jpg')\n",
+        "gimg = plt.imread('./datasets/cats_and_dogs_filtered/train/cats/cat.952.jpg')\n",
         "ximg = np.expand_dims(gimg,0)\n",
         "\n",
         "img_iter = gen.flow(ximg)\n",
@@ -346,7 +345,7 @@
         "colab": {}
       },
       "source": [
-        "# Cell 5.9\n",
+        "# Cell 5.8\n",
         "\n",
         "image_size = 160 # All images will be resized to 160x160\n",
         "batch_size = 32\n",
