--- a/transfer_learning_data.ipynb
+++ b/transfer_learning_data.ipynb
@@ -597,8 +597,8 @@
    },
    "outputs": [],
    "source": [
-    "acc = history.history['acc']\n",
-    "val_acc = history.history['val_acc']\n",
+    "acc = history.history['accuracy']\n",
+    "val_acc = history.history['val_accuracy']\n",
     "\n",
     "loss = history.history['loss']\n",
     "val_loss = history.history['val_loss']\n",
@@ -819,8 +819,8 @@
    },
    "outputs": [],
    "source": [
-    "acc += history_fine.history['acc']\n",
-    "val_acc += history_fine.history['val_acc']\n",
+    "acc += history_fine.history['accuracy']\n",
+    "val_acc += history_fine.history['val_accurracy']\n",
     "\n",
     "loss += history_fine.history['loss']\n",
     "val_loss += history_fine.history['val_loss']"
