--- a/06_transfer_learning.ipynb
+++ b/06_transfer_learning.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "accelerator": "GPU",
     "colab_type": "text",
     "id": "77gENRVX40S7"
    },
@@ -759,8 +760,8 @@
    },
    "outputs": [],
    "source": [
-    "acc += history_fine.history['acc']\n",
-    "val_acc += history_fine.history['val_acc']\n",
+    "acc += history_fine.history['accuracy']\n",
+    "val_acc += history_fine.history['val_accuracy']\n",
     "\n",
     "loss += history_fine.history['loss']\n",
     "val_loss += history_fine.history['val_loss']"
