--- a/06_transfer_learning.ipynb
+++ b/06_transfer_learning.ipynb
@@ -139,6 +139,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.1\n",
     "from __future__ import absolute_import, division, print_function\n",
     "\n",
     "import tensorflow as tf\n",
@@ -189,6 +190,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.2\n",
     "zip_file = tf.keras.utils.get_file(origin=\"https://storage.googleapis.com/mledu-datasets/cats_and_dogs_filtered.zip\", \n",
     "                                   fname=\"cats_and_dogs_filtered.zip\", extract=True)\n",
     "base_dir, _ = os.path.splitext(zip_file)"
@@ -215,6 +217,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.3\n",
     "train_dir = os.path.join(base_dir, 'train')\n",
     "validation_dir = os.path.join(base_dir, 'validation')\n",
     "\n",
@@ -261,6 +264,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.2\n",
     "image_size = 160 # All images will be resized to 160x160\n",
     "batch_size = 32\n",
     "\n",
@@ -311,6 +315,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.4\n",
     "IMG_SHAPE = (image_size, image_size, 3)\n",
     "\n",
     "# Create the base model from the pre-trained model MobileNet V2\n",
@@ -351,6 +356,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.5\n",
     "base_model.trainable = False"
    ]
   },
@@ -364,6 +370,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.6\n",
     "# Let's take a look at the base model architecture\n",
     "base_model.summary()"
    ]
@@ -398,6 +405,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.7\n",
     "model = tf.keras.Sequential([\n",
     "  base_model,\n",
     "  keras.layers.GlobalAveragePooling2D(),\n",
@@ -427,6 +435,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.8\n",
     "model.compile(optimizer=tf.keras.optimizers.RMSprop(lr=0.0001), \n",
     "              loss='binary_crossentropy', \n",
     "              metrics=['accuracy'])"
@@ -442,6 +451,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.9\n",
     "model.summary()"
    ]
   },
@@ -465,6 +475,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.10\n",
     "len(model.trainable_variables)"
    ]
   },
@@ -475,6 +486,7 @@
     "id": "RxvgOYTDSWTx"
    },
    "source": [
+    "# Cell 6.11\n",
     "### Train the model\n",
     "\n",
     "After training for 10 epochs, we are able to get ~94% accuracy. \n",
@@ -492,6 +504,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.12\n",
     "epochs = 10\n",
     "steps_per_epoch = train_generator.n // batch_size\n",
     "validation_steps = validation_generator.n // batch_size\n",
@@ -511,6 +524,7 @@
     "id": "Hd94CKImf8vi"
    },
    "source": [
+    "# Cell 6.13\n",
     "### Learning curves\n",
     "\n",
     "Let's take a look at the learning curves of the training and validation accuracy / loss, when using the MobileNet V2 base model as a fixed feature extractor. "
@@ -523,6 +537,7 @@
     "id": "l7HOsQTPNgO9"
    },
    "source": [
+    "# Cell 6.14\n",
     "If you train to convergence (`epochs=50`) the resulting graph should look like this:\n",
     "\n",
     "![Before fine tuning, the model reaches 96% accuracy](https://github.com/tensorflow/docs/blob/master/site/en/tutorials/images/images/before_fine_tuning.pnd?raw=1)"
@@ -538,6 +553,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.15\n",
     "acc = history.history['accuracy']\n",
     "val_acc = history.history['val_accuracy']\n",
     "\n",
@@ -608,6 +624,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.16\n",
     "base_model.trainable = True"
    ]
   },
@@ -621,6 +638,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.17\n",
     "# Let's take a look to see how many layers are in the base model\n",
     "print(\"Number of layers in the base model: \", len(base_model.layers))\n",
     "\n",
@@ -639,6 +657,7 @@
     "id": "4Uk1dgsxT0IS"
    },
    "source": [
+    "# Cell 6.18\n",
     "### Compile the model\n",
     "\n",
     "Compile the model using a much-lower training rate."
@@ -654,6 +673,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.19\n",
     "\n",
     "model.compile(loss='binary_crossentropy',\n",
     "              optimizer = tf.keras.optimizers.RMSprop(lr=2e-5),\n",
@@ -670,6 +690,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.20\n",
     "model.summary()"
    ]
   },
@@ -683,6 +704,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.21\n",
     "len(model.trainable_variables)"
    ]
   },
@@ -716,6 +738,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.22\n",
     "history_fine = model.fit_generator(train_generator, \n",
     "                                   steps_per_epoch = steps_per_epoch,\n",
     "                                   epochs=epochs, \n",
@@ -760,6 +783,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.23\n",
     "acc += history_fine.history['accuracy']\n",
     "val_acc += history_fine.history['val_accuracy']\n",
     "\n",
@@ -777,6 +801,7 @@
    },
    "outputs": [],
    "source": [
+    "# Cell 6.24\n",
     "plt.figure(figsize=(8, 8))\n",
     "plt.subplot(2, 1, 1)\n",
     "plt.plot(acc, label='Training Accuracy')\n",
