--- a/00_test_install.ipynb
+++ b/00_test_install.ipynb
@@ -137,7 +137,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Check if Numpy and Pillow are working. After runnign this cell, you should see a random image appear below."
+        "Check if Numpy and Pillow are working. After running this cell, you should see a random image appear below."
       ]
     },
     {
