Test 3 files not as 2.0.0alpha0

--- a/00_test_install.ipynb
+++ b/00_test_install.ipynb
@@ -76,8 +76,8 @@
       "source": [
         "# Cell 0.1\n",
         "import tensorflow as tf\n",
-        "if tf.__version__ != \"2.0.0-alpha0\":\n",
-        "    !pip install tensorflow-gpu==2.0.0-alpha0\n",
+        "if tf.__version__ != \"2.0.0\":\n",
+        "    !pip install tensorflow-gpu==2.0.0\n",
         "    print(\"Please go to Runtime -> restart runtime and then, once that finishes, rerun this cell.\")\n",
         "\n",
         "import numpy as np\n",
