--- a/02_tensorflow_logistic_regression.ipynb
+++ b/02_tensorflow_logistic_regression.ipynb
@@ -75,8 +75,8 @@
       "source": [
         "# Cell 2.1\n",
         "import tensorflow as tf\n",
-        "if tf.__version__ != \"2.0.0-alpha0\":\n",
-        "    !pip install tensorflow-gpu==2.0.0-alpha0\n",
+        "if tf.__version__ != \"2.0.0\":\n",
+        "    !pip install tensorflow-gpu==2.0.0\n",
         "    print(\"Please go to Runtime -> restart runtime and then, once that finishes, rerun this cell.\")\n",
         "\n",
         "from tensorflow import keras\n",
