--- a/01_linear_regression.ipynb
+++ b/01_linear_regression.ipynb
@@ -80,6 +80,7 @@
       },
       "source": [
         "# Cell 1.1\n",
+        "%tensorflow_version 2.x",
         "import tensorflow as tf\n",
         "if tf.__version__ != \"2.0.0\":\n",
         "    !pip install tensorflow-gpu==2.0.0\n",
