--- a/02_tensorflow_logistic_regression.ipynb
+++ b/02_tensorflow_logistic_regression.ipynb
@@ -74,7 +74,7 @@
       },
       "source": [
         "# Cell 2.1\n",
-        "%tensorflow_version 2.x",
+        "%tensorflow_version 2.x\n",
         "import tensorflow as tf\n",
         "if tf.__version__ != \"2.0.0\":\n",
         "    !pip install tensorflow-gpu==2.0.0\n",
