Fix all the TF 2.0 import things

--- a/06_transfer_learning.ipynb
+++ b/06_transfer_learning.ipynb
@@ -207,9 +207,10 @@
         "# Cell 6.1\n",
         "from __future__ import absolute_import, division, print_function\n",
         "\n",
+        "%tensorflow_version 2.x\n",
         "import tensorflow as tf\n",
-        "if tf.__version__ != \"2.0.0-alpha0\":\n",
-        "    !pip install tensorflow-gpu==2.0.0-alpha0\n",
+        "if tf.__version__ != \"2.0.0\":\n",
+        "    !pip install tensorflow-gpu==2.0.0\n",
         "    print(\"Please go to Runtime -> restart runtime and then, once that finishes, rerun this cell.\")\n",
         "\n",
         "\n",
