--- a/03a_tensorflow_deep_network.ipynb
+++ b/03a_tensorflow_deep_network.ipynb
@@ -76,9 +76,10 @@
       },
       "source": [
         "# Cell 3a.1\n",
+        "%tensorflow_version 2.x\n",
         "import tensorflow as tf\n",
-        "if tf.__version__ != \"2.0.0-alpha0\":\n",
-        "    !pip install tensorflow-gpu==2.0.0-alpha0\n",
+        "if tf.__version__ != \"2.0.0\":\n",
+        "    !pip install tensorflow-gpu==2.0.0\n",
         "    print(\"Please go to Runtime -> restart runtime and then, once that finishes, rerun this cell.\")\n",
         "\n",
         "from tensorflow import keras\n",
