--- a/05_data_prep.ipynb
+++ b/05_data_prep.ipynb
@@ -69,9 +69,10 @@
       },
       "source": [
         "# Cell 5.1\n",
+        "%tensorflow_version 2.x\n",
         "import tensorflow as tf\n",
-        "if tf.__version__ != \"2.0.0-alpha0\":\n",
-        "    !pip install tensorflow-gpu==2.0.0-alpha0\n",
+        "if tf.__version__ != \"2.0.0\":\n",
+        "    !pip install tensorflow-gpu==2.0.0\n",
         "    print(\"Please go to Runtime -> restart runtime and then, once that finishes, rerun this cell.\")\n",
         "\n",
         "from __future__ import absolute_import, division, print_function\n",
